--- a/lisp/mh-e/ChangeLog
+++ b/lisp/mh-e/ChangeLog
@@ -1,5 +1,9 @@
 2012-11-25  Bill Wohler  <wohler@newt.com>
 
+	* mh-e.el (mh-version):  Add +bzr to version.
+
+2012-11-25  Bill Wohler  <wohler@newt.com>
+
 	Release MH-E version 8.4.
 
 	* mh-e.el (Version, mh-version): Update for release 8.4.
