--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-26  Glenn Morris  <rgm@gnu.org>
+
+	* hippie-exp.el (hippie-expand-try-functions-list):
+	Re-autoload it.  (Bug#12982)
+
 2012-11-25  Eli Zaretskii  <eliz@gnu.org>
 
 	* descr-text.el (describe-char-padded-string): Call
