Partial fix for bug #12989 with buffer-file-type annoyances.
 lisp/subr.el (buffer-file-type): Declare with defvar-local.  Doc fix.
 lisp/dos-w32.el (find-file-not-found-set-buffer-file-coding-system):
 Don't set buffer-file-type.  Return nil.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,10 @@
+2012-11-26  Eli Zaretskii  <eliz@gnu.org>
+
+	* subr.el (buffer-file-type): Declare with defvar-local.  Doc fix.
+
+	* dos-w32.el (find-file-not-found-set-buffer-file-coding-system):
+	Don't set buffer-file-type.  (Bug#12989)
+
 2012-11-26  Glenn Morris  <rgm@gnu.org>
 
 	* hippie-exp.el (hippie-expand-try-functions-list):
