--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,10 @@
+2012-11-26  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* emacs-lisp/advice.el (ad-should-compile): Don't compile advice if the
+	base function is not yet defined (bug#12965).
+	(ad-activate-advised-definition): Use ad-compile-function.
+	(ad-activate): Use cond.
+
 2012-11-25  Leo Liu  <sdl.web@gmail.com>
 
 	* textmodes/sgml-mode.el (sgml-tag): Fix indentation for closing tag.
@@ -10,14 +17,14 @@
 	Texinfo integration.
 
 	* textmodes/reftex.el (reftex-section-pre-regexp)
-	(reftex-section-post-regexp, reftex-section-info-function): New
-	variable.
-	(reftex-compile-variables): Use variables
-	reftex-section-pre-regexp, reftex-section-post-regexp, and
-	reftex-section-info-function in order to be compatible with Texinfo integration.
+	(reftex-section-post-regexp, reftex-section-info-function):
+	New variable.
+	(reftex-compile-variables): Use variables reftex-section-pre-regexp,
+	reftex-section-post-regexp, and reftex-section-info-function in order
+	to be compatible with Texinfo integration.
 
-	* textmodes/reftex-toc.el (reftex-toc-promote-action): use
-	reftex-section-pre-regexp variable in order to be compatible with
+	* textmodes/reftex-toc.el (reftex-toc-promote-action):
+	use reftex-section-pre-regexp variable in order to be compatible with
 	Texinfo integration.
 
 2012-11-25  Chong Yidong  <cyd@gnu.org>
