* net/tramp-sh.el (tramp-perl-encode): Use "read STDIN" instead of "<STDIN>".  This is binary safe.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-27  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/tramp-sh.el (tramp-perl-encode): Use "read STDIN" instead of
+	"<STDIN>".  This is binary safe.
+
 2012-11-27  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* textmodes/table.el (table-insert): Don't use `symbol-name' on
