* src/data.c (Fsymbol_value): Doc fix re lexical-binding.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-27  Glenn Morris  <rgm@gnu.org>
+
+	* data.c (Fsymbol_value): Doc fix re lexical-binding.
+
 2012-11-26  Eli Zaretskii  <eliz@gnu.org>
 
 	* fontset.c (Finternal_char_font): Return nil on non-GUI frames.
