--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-28  Jay Belanger  <jay.p.belanger@gmail.com>
+
+	* calc/calc-forms.el (calc-date-notation): Fix regexp
+	used to find time codes.  Fix symbol for seconds.
+
 2012-11-27  Glenn Morris  <rgm@gnu.org>
 
 	* emacs-lisp/derived.el (derived-mode-make-docstring):
