--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-29  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* callproc.c (Fcall_process): Don't misreport vfork failure.
+
 2012-11-28  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* callproc.c (Fcall_process): Fix vfork portability problems.
