--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-29  Kelly Dean  <kellydeanch@yahoo.com>  (tiny change)
+
+	* simple.el (activate-mark): Run activate-mark-hook (bug#13027).
+
 2012-11-29  Glenn Morris  <rgm@gnu.org>
 
 	* files.el (hack-dir-local-variables): Warn if try to set
