--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-29  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* progmodes/etags.el (visit-tags-table-buffer): Give a more precise
+	error message when the file doesn't exist (bug#12974).
+
 2012-11-29  Kelly Dean  <kellydeanch@yahoo.com>  (tiny change)
 
 	* simple.el (activate-mark): Run activate-mark-hook (bug#13027).
