--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-01  Chong Yidong  <cyd@gnu.org>
+
+	* fileio.c (Vauto_save_list_file_name): Doc fix.
+
 2012-11-30  Fabrice Popineau  <fabrice.popineau@gmail.com>
 
 	* w32fns.c: Remove prototype of atof.
