--- a/msdos/ChangeLog
+++ b/msdos/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-01  Eli Zaretskii  <eliz@gnu.org>
+
+	* sed1v2.inp: Dump emacs.exe and copy to b-emacs.exe before
+	generating leim-list.el.
+
 2012-11-03  Eli Zaretskii  <eliz@gnu.org>
 
 	* sedlibmk.inp: Sync with changes in lib/Makefile.in.
