--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-01  Leo Liu  <sdl.web@gmail.com>
+
+	* files.el (dir-locals-read-from-file): Check file non-empty
+	before reading.  (Bug#13038)
+
 2012-11-28  Glenn Morris  <rgm@gnu.org>
 
 	* jka-cmpr-hook.el (jka-compr-get-compression-info):
