--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-01  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* xterm.c (x_draw_image_relief): Remove unused locals (Bug#10500).
+
 2012-12-01  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>
 
 	* xterm.c (x_draw_relief_rect, x_draw_image_relief): Fix relief
