* lib-src/etags.c (Lisp_functions): Skip (defvar foo) declarations unless the --declarations flag is enabled. (Lisp_help): Update. (skip_name): New function.
* doc/emacs/maintaining.texi (Tag Syntax): Mention (defvar foo) handling.

* doc/man/etags.1: Mention effect of --declarations in Lisp.

--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-02  Kevin Ryde  <user42@zip.com.au>
+
+	* maintaining.texi (Tag Syntax): Mention (defvar foo) handling.
+
 2012-12-01  Kevin Ryde  <user42@zip.com.au>
 
 	* maintaining.texi (Tag Syntax): Mention Perl's "use constant".
