--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-02  Juri Linkov  <juri@jurta.org>
+
+	* info.el (info-display-manual): Don't clobber an existing Info
+	buffer (Bug#10770).
+
 2012-12-01  Yuya Nishihara  <yuya@tcha.org>  (tiny change)
 
 	* vc/vc-hooks.el (vc-find-file-hook): Expand buffer-file-truename
