--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-02  Chong Yidong  <cyd@gnu.org>
+
+	* custom.texi (Init Rebinding): kbd is now a function (Bug#13052).
+
 2012-11-18  Dani Moncayo  <dmoncayo@gmail.com>
 
 	* display.texi (Auto Scrolling): Fix some inaccuracies, plus
