--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-02  Chong Yidong  <cyd@gnu.org>
+
+	* keymaps.texi (Key Sequences): kbd is now a function.
+
 2012-11-23  Martin Rudalics  <rudalics@gmx.at>
 
 	* windows.texi (Basic Windows): Fix typo.
