--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,6 +1,19 @@
 2012-12-02  Chong Yidong  <cyd@gnu.org>
 
+	* symbols.texi (Symbol Properties): New node.
+	(Symbol Plists): Make it a subsection under Symbol Properties.
+	(Standard Properties): New node.
+
+	* lists.texi (Property Lists): Move here from symbols.texi.
+	(Plist Access): Rename from Other Plists.
+
+	* customize.texi (Variable Definitions):
+	* display.texi (Defining Faces):
+	* sequences.texi (Char-Tables): Fix xref.
+
 	* keymaps.texi (Key Sequences): kbd is now a function.
+
+	* commands.texi (Using Interactive): Fix index entry.
 
 2012-11-23  Martin Rudalics  <rudalics@gmx.at>
 
