--- a/lisp/gnus/ChangeLog
+++ b/lisp/gnus/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-02  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* gnus-sync.el (gnus-sync-newsrc-offsets): Restore definition.
+	(gnus-sync-save): Use correct format for gnus-sync-newsrc-loader.
+
 2012-11-16  Jan Tatarik  <jan.tatarik@gmail.com>
 
 	* gnus-score.el (gnus-score-body):
