--- a/lisp/gnus/ChangeLog
+++ b/lisp/gnus/ChangeLog
@@ -1,5 +1,9 @@
 2012-12-02  Andreas Schwab  <schwab@linux-m68k.org>
 
+	* gnus-sum.el (gnus-summary-mode-map): Bind gnus-summary-widget-forward
+	to TAB, not [tab].
+	(gnus-summary-article-map): Likewise.
+
 	* gnus-sync.el (gnus-sync-newsrc-offsets): Restore definition.
 	(gnus-sync-save): Use correct format for gnus-sync-newsrc-loader.
 
