--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-02  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.texi (Top, Obtaining Tramp): Replace CVS by Git.
+	(External methods): Fix typo.
+
 2012-11-30  Glenn Morris  <rgm@gnu.org>
 
 	* rcirc.texi (Notices): Fix typo.
