--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-02  Dmitry Gutov  <dgutov@yandex.ru>
+
+	* vc/vc.el (vc-delete-file, vc-rename-file): Default to the
+	current buffer's file name when called interactively (Bug#12488).
+
 2012-12-02  Juri Linkov  <juri@jurta.org>
 
 	* info.el (info-display-manual): Don't clobber an existing Info
